force-app/main/default/objects/OpportunityTeamMemberHistory__c/OpportunityTeamMemberHistory__c.object-meta.xml
<CustomObject>
    <label>Opportunity Team Member History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Team Member History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Team Member History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>