force-app/main/default/objects/OpportunityTeamMemberHistory__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Team_Member_History1</relationshipName>
    <type>Lookup</type>
</CustomField>