force-app/main/default/objects/OpportunityTeamMemberHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>