force-app/main/default/objects/OpportunityTeamMemberHistory__c/fields/Opportunity_Access__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Access__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>