force-app/main/default/objects/OpportunityTeamMemberHistory__c/fields/OpptyId__c.field-meta.xml
<CustomField>
    <fullName>OpptyId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OpptyId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>