force-app/main/default/objects/OpportunityTeamMemberHistory__c/fields/OpptyTeamId__c.field-meta.xml
<CustomField>
    <fullName>OpptyTeamId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>OpptyTeamId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>